course section done

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <a class="nav-link active " aria-current=" page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Courses</a>
+                            <a class="nav-link" href="#courses">Courses</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Deals</a>
@@ -108,7 +108,110 @@
 
     <!-- header section end  -->
 
+    <!-- main section starts here  -->
+    <main class="container">
+        <!-- course section  -->
+        <section id="courses" class="course mt-5">
+            <div class="course-text text-center">
+                <h1>Discover Our Popular Courses</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                    when
+                    looking at its layout.</p>
+            </div>
 
+            <div class="container">
+                <div class="row g-2">
+                    <div class="col-lg-6 col-md-12 col-12 mt-3">
+                        <div class="border bg-light d-flex p-3">
+                            <img src="images/course/course-1.png" alt="">
+                            <div class="ms-4">
+                                <h4>Fundamental Of UI/UX Design</h4>
+                                <p>Some quick example text to build on the card title and make up the bulk of the
+                                    card.
+                                </p>
+                                <p class="text-primary fw-bold">Price : 20$</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-12 mt-3">
+                        <div class="border bg-light d-flex p-3">
+                            <img src="images/course/course-2.png" alt="">
+                            <div class="ms-4">
+                                <h4>Javascript Basic to advanced</h4>
+                                <p>Some quick example text to build on the card title and make up the bulk of the
+                                    card.
+                                </p>
+                                <p class="text-primary fw-bold">Price : 20$</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-12 mt-3">
+                        <div class="border bg-light d-flex p-3">
+                            <img src="images/course/course-3.png" alt="">
+                            <div class="ms-4">
+                                <h4>Fullstack Web Development</h4>
+                                <p>Some quick example text to build on the card title and make up the bulk of the
+                                    card.
+                                </p>
+                                <p class="text-primary fw-bold">Price : 20$</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-12 mt-3">
+                        <div class=" border bg-light d-flex  p-3">
+                            <img src="images/course/course-4.png" alt="">
+                            <div class="ms-4">
+                                <h4>Digital Marketing</h4>
+                                <p>Some quick example text to build on the card title and make up the bulk of the
+                                    card.
+                                </p>
+                                <p class="text-primary fw-bold">Price : 20$</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-12 mt-3">
+                        <div class=" border bg-light d-flex  p-3">
+                            <img src="images/course/course-5.png" alt="">
+                            <div class="ms-4">
+                                <h4>Photography Basic Rules</h4>
+                                <p>Some quick example text to build on the card title and make up the bulk of the card.
+                                </p>
+                                <p class="text-primary fw-bold">Price : 20$</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-12 mt-3">
+                        <div class=" border bg-light d-flex p-3">
+                            <img src="images/course/course-6.png" alt="">
+                            <div class="ms-4">
+                                <h4>Motion Graphics</h4>
+                                <p>Some quick example text to build on the card title and make up the bulk of the card.
+                                </p>
+                                <p class="text-primary fw-bold">Price : 20$</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-center d-flex justify-content-center mt-5">
+                    <button class="btn btn-primary text-center d-flex">See All Courses</button>
+                </div>
+            </div>
+
+
+        </section>
+
+        <!-- e-learning section starts  -->
+        <div class="col-lg-6 col-md-12 col-12">
+            <img src="images/working.png" alt="">
+        </div>
+        <div class="col-lg-6 col-md-12 col-12">
+            <h1>Explore The elearning Institute</h1>
+        </div>
+
+    </main>
+
+
+    <!-- main section ends here  -->
 
 
 
