elearning section done

--- a/index.html
+++ b/index.html
@@ -201,12 +201,65 @@
         </section>
 
         <!-- e-learning section starts  -->
-        <div class="col-lg-6 col-md-12 col-12">
-            <img src="images/working.png" alt="">
-        </div>
-        <div class="col-lg-6 col-md-12 col-12">
-            <h1>Explore The elearning Institute</h1>
-        </div>
+        <section class="mt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-6 col-md-12 ">
+                        <div class="">
+                            <img style="height: 600px;" src="images/working.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-6 col-md-12 mt-5">
+                        <h1>Explore The elearning Institute</h1>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered
+                            alteration
+                            in some form, by injected humour, or randomised words which don't look even slightly
+                            believable.
+                            If
+                            you
+                            are going to use a passage of Lorem Ipsum, you need to be sure.</p>
+                        <p>Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on
+                            the
+                            Internet
+                            tend
+                            to repeat predefined.</p>
+                        <div class="rating d-flex">
+                            <div class="ms-2">
+                                <h2>3.2K+</h2>
+                                <p>Online Course</p>
+                            </div>
+                            <div class="ms-4">
+                                <h2>600+</h2>
+                                <p>Expert member</p>
+                            </div>
+                            <div class="ms-4">
+                                <h2>1K+</h2>
+                                <p>Rating & Review</p>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary mt-5">Read More</button>
+                    </div>
+
+
+                </div>
+            </div>
+        </section>
+
+        <!-- joining section here  -->
+        <section class="mt-5 bg-primary">
+            <div class="container overflow-hidden">
+                <div class="row gx-5">
+                    <div class="col-lg-8 col-md-12 col-12">
+                        <div class="p-3 border bg-light">Custom column padding</div>
+                    </div>
+                    <div class="col-lg-4 col-md-12 col-12">
+                        <div class="p-3 border bg-light">Custom column padding</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
     </main>
 
