--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- bootstrap css link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- favicon link  -->
+    <script src="https://kit.fontawesome.com/76ff243094.js" crossorigin="anonymous"></script>
     <!-- custom CSS link     -->
     <link rel="stylesheet" href="custom css/style.css">
 </head>
@@ -307,51 +309,116 @@
         </section>
 
         <!-- successful section starts here  -->
-        <section>
-            <h1></h1>
-            <div class="row row-cols-1 row-cols-md-3 g-4">
+        <section class="mt-5">
+            <div class="course-text text-center mb-4">
+                <h1>Meet Our Successfull Students</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                    looking at its layout.</p>
+            </div>
+            <div class="row row-cols-1 row-cols-md-4 g-4">
                 <div class="col">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="images/student/student-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Awlad Hossain</h5>
+                            <p class="card-text">UIUX Designer</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="images/student/student-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Jannatul Islam</h5>
+                            <p class="card-text">Motion Design</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="images/student/student-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content.</p>
+                            <h5 class="card-title">Imran Hossain</h5>
+                            <p class="card-text">Graphic Designer</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="images/student/student-4.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Nishi Akter</h5>
+                            <p class="card-text">Web Developer</p>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="text-center d-flex justify-content-center mt-5">
+                <button class="btn btn-primary px-4 text-center d-flex">View All</button>
+            </div>
+        </section>
+
+        <!-- feedback section starts  -->
+        <section class="mt-5">
+            <div class="course-text text-center mb-4">
+                <h1>Meet Our Successfull Students</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                    looking at its layout.</p>
+            </div>
+            <div class="container px-4">
+                <div class="row gx-5">
+                    <div class="col">
+                        <div class="p-3 border bg-light">
+                            <div class="stars mb-3 ">
+                                <i class="fa-solid text-warning fa-star">
+
+                                </i><i class="fa-solid text-warning fa-star">
+
+                                </i><i class="fa-solid text-warning fa-star"></i><i
+                                    class="fa-solid text-warning fa-star"></i><i
+                                    class="fa-solid text-warning fa-star"></i>
+                            </div>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                suffered alteration in some form, by injected humour, or randomised words which don't
+                                look even slightly believable. If you are going to use a passage of Lorem.</p>
+                            <div class="student-img d-flex">
+                                <img style="width: 42px; height: 42px;" src="images/student/student-5.png" alt="">
+                                <div class="student-text ms-4">
+                                    <h6>Awlad Hossain</h6>
+                                    <p>UI Designer</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="p-3 border bg-light">
+                            <div class="stars mb-3 ">
+                                <i class="fa-solid text-warning fa-star">
+
+                                </i><i class="fa-solid text-warning fa-star">
+
+                                </i><i class="fa-solid text-warning fa-star"></i><i
+                                    class="fa-solid text-warning fa-star"></i><i
+                                    class="fa-solid text-warning fa-star"></i>
+                            </div>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                suffered alteration in some form, by injected humour, or randomised words which don't
+                                look even slightly believable. If you are going to use a passage of Lorem.</p>
+                            <div class="student-img d-flex">
+                                <img style="width: 42px; height: 42px;" src="images/student/student-6.png" alt="">
+                                <div class="student-text ms-4">
+                                    <h6>Shanta Akter</h6>
+                                    <p>Graphic Designer</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
 
     </main>
 
