--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             </div>
             <div class="container px-4">
                 <div class="row gx-5">
-                    <div class="col">
+                    <div class="col-lg-6 col-md-12 col-12">
                         <div class="p-3 border bg-light">
                             <div class="stars mb-3 ">
                                 <i class="fa-solid text-warning fa-star">
@@ -392,7 +392,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-lg-6 col-md-12 col-12">
                         <div class="p-3 border bg-light">
                             <div class="stars mb-3 ">
                                 <i class="fa-solid text-warning fa-star">
@@ -494,12 +494,40 @@
                 </div>
             </div>
         </section>
+        <!-- company section starts  -->
+        <section class="mt-5 company">
+            <h1 class="text-center">Trusted by over 800+ companies</h1>
+            <div class="company-img mt-5 d-flex justify-content-evenly">
+                <img src="images/company/company-1.png" alt="">
+                <img src="images/company/company-2.png" alt="">
+                <img src="images/company/company-3.png" alt="">
+                <img src="images/company/company-4.png" alt="">
+                <img src="images/company/company-5.png" alt="">
+                <img src="images/company/company-6.png" alt="">
+            </div>
+        </section>
 
     </main>
 
 
     <!-- main section ends here  -->
+    <!-- footer section start  -->
+    <footer style="height: 400px; " class="bg-black container-fluid mt-5">
+        <div class="text-white text-center pt-5 mt-5 ">
+            <h1>Tech Hub</h1>
+            <p>Office 41, Zawaya Buildin, Ghala Muscat,
+                Sultanate of Oman</p>
+            <p>Privacy Ploicy | Terms of use</p>
 
+            <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook ms-2"></i></a>
+            <a href="https://twitter.com/?lang=en" target="_blank"><i class="fa-brands ms-2 fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands ms-2 fa-linkedin-in"></i></a>
+            <a href="https://www.tiktok.com/en/" target="_blank"><i class="fa-brands ms-2 fa-tiktok"></i></a>
+
+
+        </div>
+    </footer>
+    <!-- footer section end -->
 
 
     <!-- bootstrap js link -->
