--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
             <div class="container">
                 <div class="row g-2">
                     <div class="col-lg-6 col-md-12 col-12 mt-3">
-                        <div class="border bg-light d-flex p-3">
+                        <div class="border bg-light d-flex p-3 course_sec">
                             <img src="images/course/course-1.png" alt="">
-                            <div class="ms-4">
+                            <div class="ms-4 mt-4">
                                 <h4>Fundamental Of UI/UX Design</h4>
                                 <p>Some quick example text to build on the card title and make up the bulk of the
                                     card.
@@ -135,8 +135,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-12 col-12 mt-3">
-                        <div class="border bg-light d-flex p-3">
+                    <div class="col-lg-6 col-md-12 col-12 mt-3 ">
+                        <div class="border bg-light d-flex p-3 course_sec">
                             <img src="images/course/course-2.png" alt="">
                             <div class="ms-4">
                                 <h4>Javascript Basic to advanced</h4>
@@ -148,7 +148,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12 col-12 mt-3">
-                        <div class="border bg-light d-flex p-3">
+                        <div class="border bg-light d-flex p-3 course_sec">
                             <img src="images/course/course-3.png" alt="">
                             <div class="ms-4">
                                 <h4>Fullstack Web Development</h4>
@@ -160,7 +160,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12 col-12 mt-3">
-                        <div class=" border bg-light d-flex  p-3">
+                        <div class=" border bg-light d-flex  p-3 course_sec">
                             <img src="images/course/course-4.png" alt="">
                             <div class="ms-4">
                                 <h4>Digital Marketing</h4>
@@ -172,7 +172,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12 col-12 mt-3">
-                        <div class=" border bg-light d-flex  p-3">
+                        <div class=" border bg-light d-flex  p-3 course_sec">
                             <img src="images/course/course-5.png" alt="">
                             <div class="ms-4">
                                 <h4>Photography Basic Rules</h4>
@@ -183,7 +183,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12 col-12 mt-3">
-                        <div class=" border bg-light d-flex p-3">
+                        <div class=" border bg-light d-flex p-3 course_sec">
                             <img src="images/course/course-6.png" alt="">
                             <div class="ms-4">
                                 <h4>Motion Graphics</h4>
@@ -208,7 +208,7 @@
                 <div class="row">
                     <div class="col-12 col-lg-6 col-md-12 ">
                         <div class="">
-                            <img style="height: 500px;" src="images/working.png" alt="">
+                            <img class="img-fluid" style="height: 500px;" src="images/working.png" alt="">
                         </div>
                     </div>
                     <div class="col-12 col-lg-6 col-md-12 mt-5">
@@ -249,7 +249,7 @@
         </section>
 
         <!-- joining section here  -->
-        <section class="mt-5 bg-primary rounded-3">
+        <section class="mt-5 container-fluid bg-primary rounded-3">
             <div class="container overflow-hidden ">
                 <div class="row gx-5 mt-5 p-5">
                     <div class="col-lg-10 col-md-12 col-12">
@@ -309,7 +309,7 @@
         </section>
 
         <!-- successful section starts here  -->
-        <section class="mt-5">
+        <section class="mt-5 container-fluid">
             <div class="course-text text-center mb-4">
                 <h1>Meet Our Successfull Students</h1>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when
@@ -361,7 +361,7 @@
         </section>
 
         <!-- feedback section starts  -->
-        <section class="mt-5">
+        <section class="mt-5 container-fluid">
             <div class="course-text text-center mb-4">
                 <h1>Some Students Feedback</h1>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when
@@ -369,7 +369,7 @@
             </div>
             <div class="container px-4">
                 <div class="row gx-5">
-                    <div class="col-lg-6 col-md-12 col-12">
+                    <div class="col-lg-6 col-md-12 col-12 mt-3">
                         <div class="p-3 border bg-light">
                             <div class="stars mb-3 ">
                                 <i class="fa-solid text-warning fa-star">
@@ -392,7 +392,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-12 col-12">
+                    <div class="col-lg-6 col-md-12 col-12 mt-3">
                         <div class="p-3 border bg-light">
                             <div class="stars mb-3 ">
                                 <i class="fa-solid text-warning fa-star">
@@ -419,7 +419,7 @@
             </div>
         </section>
         <!-- FAQ section starts  -->
-        <section class="mt-5">
+        <section class="mt-5 container-fluid">
             <div class="course-text text-center mb-4">
                 <h1>Frequently Asked Questions</h1>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when
@@ -495,7 +495,7 @@
             </div>
         </section>
         <!-- company section starts  -->
-        <section class="mt-5 company">
+        <section id="company" class="mt-5">
             <h1 class="text-center">Trusted by over 800+ companies</h1>
             <div class="company-img mt-5 d-flex justify-content-evenly">
                 <img src="images/company/company-1.png" alt="">
