--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div class="col-lg-6 col-md-12 col-12 mt-3 ">
                         <div class="border bg-light d-flex p-3 course_sec">
                             <img src="images/course/course-2.png" alt="">
-                            <div class="ms-4">
+                            <div class="ms-4 mt-4">
                                 <h4>Javascript Basic to advanced</h4>
                                 <p>Some quick example text to build on the card title and make up the bulk of the
                                     card.
@@ -150,7 +150,7 @@
                     <div class="col-lg-6 col-md-12 col-12 mt-3">
                         <div class="border bg-light d-flex p-3 course_sec">
                             <img src="images/course/course-3.png" alt="">
-                            <div class="ms-4">
+                            <div class="ms-4 mt-4">
                                 <h4>Fullstack Web Development</h4>
                                 <p>Some quick example text to build on the card title and make up the bulk of the
                                     card.
@@ -162,7 +162,7 @@
                     <div class="col-lg-6 col-md-12 col-12 mt-3">
                         <div class=" border bg-light d-flex  p-3 course_sec">
                             <img src="images/course/course-4.png" alt="">
-                            <div class="ms-4">
+                            <div class="ms-4 mt-4">
                                 <h4>Digital Marketing</h4>
                                 <p>Some quick example text to build on the card title and make up the bulk of the
                                     card.
@@ -174,7 +174,7 @@
                     <div class="col-lg-6 col-md-12 col-12 mt-3">
                         <div class=" border bg-light d-flex  p-3 course_sec">
                             <img src="images/course/course-5.png" alt="">
-                            <div class="ms-4">
+                            <div class="ms-4 mt-4">
                                 <h4>Photography Basic Rules</h4>
                                 <p>Some quick example text to build on the card title and make up the bulk of the card.
                                 </p>
@@ -185,7 +185,7 @@
                     <div class="col-lg-6 col-md-12 col-12 mt-3">
                         <div class=" border bg-light d-flex p-3 course_sec">
                             <img src="images/course/course-6.png" alt="">
-                            <div class="ms-4">
+                            <div class="ms-4 mt-4">
                                 <h4>Motion Graphics</h4>
                                 <p>Some quick example text to build on the card title and make up the bulk of the card.
                                 </p>
@@ -203,7 +203,7 @@
         </section>
 
         <!-- e-learning section starts  -->
-        <section class="mt-5">
+        <section id="e-learning" class="mt-5">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-lg-6 col-md-12 ">
